--- a/.github/workflows/build-gcc.yml
+++ b/.github/workflows/build-gcc.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build SDL
         working-directory: ./mxe
         run: |
-          make MXE_TARGETS=x86_64-w64-mingw32.static.gcc11 MXE_PLUGIN_DIRS=plugins/gcc11 sdl2 sdl2-ttf sdl2-image sdl2-mixer
+          make MXE_TARGETS=x86_64-w64-mingw32.static.gcc11 MXE_PLUGIN_DIRS=plugins/gcc11 sdl2 sdl2_ttf sdl2_image sdl2_mixer
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
