--- a/.github/workflows/build-gcc.yml
+++ b/.github/workflows/build-gcc.yml
@@ -22,15 +22,29 @@ jobs:
         working-directory: /opt/mxe
         run: |
           sudo make MXE_TARGETS=x86_64-w64-mingw32.static.gcc11 MXE_PLUGIN_DIRS=plugins/gcc11 gcc
+      - name: Build SDL2
+        working-directory: /opt/mxe
+        run: |
+          sudo make MXE_TARGETS=x86_64-w64-mingw32.static.gcc11 MXE_PLUGIN_DIRS=plugins/gcc11 sdl2 sdl2_ttf sdl2_image sdl2_mixer
       - name: Archive MXE
         run: |
-          tar -cJf mxe.tar.xz /opt/mxe/usr
+          tar -cJf mxe-gcc11.tar.xz -C /opt mxe/usr
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: mxe-gcc11
-          path: mxe.tar.xz
+          path: mxe-gcc11.tar.xz
       - name: Verify MXE GCC
         run: |
-          /opt/mxe/usr/bin/x86_64-w64-mingw32.static.gcc11-g++ -v
+          export PATH=/opt/mxe/usr/bin/:$PATH
+          x86_64-w64-mingw32.static.gcc11-g++ -v
+          cat << EOF > test.cpp
+          #include <iostream>
+          int main() {
+            std::cout << "Hello, world!" << std::endl;
+            return 0;
+          }
+          EOF
+          x86_64-w64-mingw32.static.gcc11-g++ test.cpp -o test.exe
+          wine64 test.exe
 
