--- a/.github/workflows/build-mxe.yml
+++ b/.github/workflows/build-mxe.yml
@@ -26,6 +26,11 @@ jobs:
         working-directory: /opt
         run: |
           sudo git clone https://github.com/mxe/mxe
+      - name: Apply FreeType version rollback patch
+        working-directory: /opt/mxe
+        run: |
+          sudo wget https://raw.githubusercontent.com/BrettDong/MXE-GCC/master/freetype-2.10.4.patch
+          sudo git am freetype-2.10.4.patch
       - name: Build GCC 11
         working-directory: /opt/mxe
         run: |
