--- a/.github/workflows/build-mxe.yml
+++ b/.github/workflows/build-mxe.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y autoconf automake autopoint bash bison bzip2 cmake flex g++ g++-multilib gettext git libglib2.0-dev gperf intltool libboost-dev libc6-dev-i386 libffi-dev libgdk-pixbuf2.0-dev libltdl-dev libssl-dev libtool-bin libxml-parser-perl lzip make openssl p7zip-full patch perl pkgconf python ruby sed unzip wget xz-utils zlib1g-dev
+          sudo apt install -y autoconf automake autopoint bash bison bzip2 cmake flex g++ g++-multilib gettext git libglib2.0-dev gperf intltool libboost-dev libc6-dev-i386 libffi-dev libgdk-pixbuf2.0-dev libltdl-dev libssl-dev libtool-bin libxml-parser-perl lzip make openssl p7zip-full patch perl pkgconf python3 python3-mako ruby sed unzip wget xz-utils zlib1g-dev
       - name: Clone MXE Repo
         working-directory: /opt
         run: |
