Build on demand

--- a/.github/workflows/build-mxe.yml
+++ b/.github/workflows/build-mxe.yml
@@ -1,9 +1,8 @@
 name: Build MXE
 
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
+
 
 jobs:
   build-mxe:
@@ -16,7 +15,7 @@ jobs:
           - name: Build MXE (x64)
             arch: x86_64
     name: ${{ matrix.name }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Install dependencies
         run: |
